[package]
name = "lumen"
version = "2.5.0"
edition = "2021"
license = "MIT"
description = "lumen is a command-line tool that uses AI to generate commit messages, summarise git diffs or past commits, and more."
keywords = ["cli", "terminal", "ai", "git", "commit"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/jnsahaj/lumen"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
genai = "0.4"
spinoff = { version = "0.8.0", features = ["dots"] }
thiserror = "1.0"
indoc = "2.0.5"
xml-rs = "0.8"
dirs = "6.0.0"
ratatui = "0.29"
crossterm = "0.28"
similar = "2.6"
notify = "7.0"
notify-debouncer-mini = "0.5"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-highlight = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-json = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.23"
once_cell = "1.20"
arboard = "3.4"
inquire = "0.7"

[profile.release]
lto = true
